<resources>
    <string name="app_name">Wayfinding</string>
    <string name="title_activity_admin_login_screen">AdminLoginScreen</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_fr">Se Connecter</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_off">Sign off</string>
    <string name="sign_off_fr">Se Déconnecter</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation">Navigation</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_location">Search here</string>
    <string name="announcement_title">Announcements</string>
    <string name="search_spinner_title">Select location</string>
    <string name="delete_announcement">Delete Announcement</string>
    <string name="add_announcement">Add announcement</string>

    <string name="welcome_text_1_fr">Bienvenue</string>
    <string name="welcome_text_2_fr">À la</string>
    <string name="welcome_text_3_fr">Bibliothèque</string>
    <string name="welcome_text_4_fr">Morisset</string>
    <string name="welcome_text_1">Welcome</string>
    <string name="welcome_text_2">To the</string>
    <string name="welcome_text_3">Morisset</string>
    <string name="welcome_text_4">Library</string>

    <string name="prompt_announce_title">Announcement Title</string>
    <string name="prompt_announce">Enter Announcement</string>
    <string name="publish_button">Publish</string>
</resources>