<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/adminFrame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context=".HomePageActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.13"
        android:background="#991B31"
        android:src="@drawable/uottawaheader" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.04" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/add_announcement_frame"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginRight="10dp"
        android:layout_weight="0.06"
        android:onClick="addAnnouncementClick">

        <Button
            android:id="@+id/add_announcement_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:onClick="addAnnouncementClick"
            android:background="@drawable/add_button"
            android:foregroundGravity="center_horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/amethysta"
            android:text="@string/add_announcement"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/add_announcement_button"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.05" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.72"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/announcement_title_background"
            android:fontFamily="@font/amethysta"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/announcement_title"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ListView
            android:id="@+id/announcement"
            android:layout_width="340dp"
            android:layout_height="330dp"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:background="@drawable/announcement_list_background"
            android:clipToPadding="false"
            android:divider="@drawable/divider"
            android:dividerHeight="40sp"
            android:paddingTop="13sp"
            android:paddingBottom="13sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button"
                android:layout_width="130dp"
                android:layout_height="40dp"
                android:background="@drawable/roundedbutton"
                android:backgroundTint="#99102f"
                android:onClick="goToHome"
                android:text="@string/sign_off"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="visible" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</LinearLayout>