<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainFrame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:weightSum="1">

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        app:srcCompat="@drawable/uottawa_rounded" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.50">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:paddingBottom="35dp"
            android:background="@drawable/welcome_text_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/amethysta"
                android:text="@string/welcome_text_3"
                android:textColor="#FFFFFF"
                android:textSize="36sp"
                android:textStyle="bold"
                android:paddingLeft="5dp"
                android:paddingVertical="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView4" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/amethysta"
                android:text="@string/welcome_text_4"
                android:textColor="#FFFFFF"
                android:textSize="36sp"
                android:textStyle="bold"
                android:paddingLeft="5dp"
                android:paddingVertical="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView6" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:background="@drawable/welcome_text"
                android:fontFamily="@font/amethysta"
                android:lineSpacingExtra="10sp"
                android:paddingVertical="10dp"
                android:text="@string/welcome_text_1"
                android:textColor="#FFFFFF"
                android:textSize="36sp"
                android:textStyle="bold"
                android:paddingLeft="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:paddingVertical="5dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/amethysta"
                android:text="@string/welcome_text_2"
                android:textColor="#FFFFFF"
                android:textSize="36sp"
                android:textStyle="bold"
                android:paddingLeft="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView8" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/navigationButtons"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25">

        <Button
            android:id="@+id/button"
            android:layout_width="130dp"
            android:layout_height="40dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/roundedbutton"
            android:backgroundTint="#99102f"
            android:onClick="goToSignin"
            android:text="@string/action_sign_in_short"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/homeButton"
            tools:visibility="visible" />

        <ToggleButton
            android:id="@+id/soundIcon"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="84dp"
            android:background="@drawable/ic_baseline_volume_up_24"
            android:scaleX="0.7"
            android:scaleY="0.7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageButton
            android:id="@+id/homeButton"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="1dp"
            android:background="@drawable/ic_baseline_home_24"
            android:onClick="goToHome"
            android:scaleX="0.7"
            android:scaleY="0.7"
            app:layout_constraintEnd_toStartOf="@+id/toggleLight"
            app:layout_constraintStart_toEndOf="@+id/soundIcon"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpeakableTextPresentCheck" />

        <ToggleButton
            android:id="@+id/toggleLight"
            android:layout_width="80dp"
            android:layout_height="77dp"
            android:layout_marginEnd="84dp"
            android:background="@drawable/ic_baseline_brightness_3_24"
            android:scaleX="0.7"
            android:scaleY="0.7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpeakableTextPresentCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
<!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    android:id="@+id/mainFrame"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    android:background="@color/white"-->
<!--    tools:context=".MainActivity">-->

<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:orientation="vertical"-->
<!--        android:weightSum="1">-->

<!--        <ImageView-->
<!--            android:id="@+id/imageView8"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="0dp"-->
<!--            android:layout_weight="0.25"-->
<!--            android:paddingTop="20dp"-->
<!--            android:paddingBottom="20dp"-->
<!--            app:srcCompat="@drawable/uottawa_rounded" />-->

<!--        <ImageView-->
<!--            android:id="@+id/imageView11"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="0dp"-->
<!--            android:layout_weight="0.50"-->
<!--            android:scaleType="fitStart"-->
<!--            app:srcCompat="@drawable/uottawa_welcome_text" />-->

<!--        <androidx.constraintlayout.widget.ConstraintLayout-->
<!--            android:id="@+id/navigationButtons"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="0dp"-->
<!--            android:layout_weight="0.25">-->

<!--            <Button-->
<!--                android:id="@+id/button"-->
<!--                android:layout_width="130dp"-->
<!--                android:layout_height="40dp"-->
<!--                android:layout_marginTop="12dp"-->
<!--                android:background="@drawable/roundedbutton"-->
<!--                android:backgroundTint="#99102f"-->
<!--                android:onClick="goToSignin"-->
<!--                android:text="@string/action_sign_in_short"-->
<!--                android:textAppearance="@style/TextAppearance.AppCompat.Body1"-->
<!--                android:textSize="20sp"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintHorizontal_bias="0.498"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toBottomOf="@+id/soundIcon"-->
<!--                tools:visibility="visible" />-->

<!--            <ToggleButton-->
<!--                android:id="@+id/soundIcon"-->
<!--                android:layout_width="80dp"-->
<!--                android:layout_height="80dp"-->
<!--                android:layout_marginStart="2dp"-->
<!--                android:layout_marginTop="4dp"-->
<!--                android:layout_marginEnd="81dp"-->
<!--                android:background="@drawable/ic_baseline_volume_up_24"-->
<!--                android:scaleX="0.7"-->
<!--                android:scaleY="0.7"-->
<!--                app:layout_constraintEnd_toEndOf="@+id/toggleLight"-->
<!--                app:layout_constraintHorizontal_bias="0.375"-->
<!--                app:layout_constraintStart_toEndOf="@+id/homeButton"-->
<!--                app:layout_constraintTop_toTopOf="parent"-->
<!--                tools:ignore="SpeakableTextPresentCheck" />-->


<!--            <ImageButton-->
<!--                android:id="@+id/homeButton"-->
<!--                android:layout_width="80dp"-->
<!--                android:layout_height="80dp"-->
<!--                android:layout_marginStart="80dp"-->
<!--                android:layout_marginTop="4dp"-->
<!--                android:background="@drawable/ic_baseline_home_24"-->
<!--                android:onClick="goToHome"-->
<!--                android:scaleX="0.7"-->
<!--                android:scaleY="0.7"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toTopOf="parent"-->
<!--                tools:ignore="SpeakableTextPresentCheck" />-->

<!--            <ToggleButton-->
<!--                android:id="@+id/toggleLight"-->
<!--                android:layout_width="80dp"-->
<!--                android:layout_height="80dp"-->
<!--                android:layout_marginTop="4dp"-->
<!--                android:layout_marginEnd="80dp"-->
<!--                android:background="@drawable/ic_baseline_brightness_3_24"-->
<!--                android:scaleX="0.7"-->
<!--                android:scaleY="0.7"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintTop_toTopOf="parent"-->
<!--                tools:ignore="SpeakableTextPresentCheck" />-->
<!--        </androidx.constraintlayout.widget.ConstraintLayout>-->
<!--    </LinearLayout>-->

<!--    &lt;!&ndash;        android:contentDescription="@strings/todo"&ndash;&gt;-->

<!--</androidx.constraintlayout.widget.ConstraintLayout>-->